argocd/arm/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: arm
  labels:
    app.kubernetes.io/name: arm
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetPort: http
  selector:
    app.kubernetes.io/name: arm
